Goes into simple and runs gmake instead of osgNav which is inside simple.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13996 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/samples/OSG/Makefile.in
+++ b/juggler/modules/vrjuggler/samples/OSG/Makefile.in
@@ -31,28 +31,28 @@
 # *************** <auto-copyright.pl END do not edit this line> ***************
 
 # -----------------------------------------------------------------------------
-# Makefile.in for juggler/samples/ogl
+# Makefile.in for juggler/samples/OSG
 #
 # Generated for use on @PLATFORM@
 # -----------------------------------------------------------------------------
 
-APPS	= osgNav
+DIRS= simple
 
 # -----------------------------------------------------------------------------
 # Build targets.
 # -----------------------------------------------------------------------------
 default: all
 
-all: $(APPS)
+all: $(DIRS)
 
-$(APPS)::
+$(DIRS)::
 	cd $@ && $(MAKE)
 
 # -----------------------------------------------------------------------------
 # Clean-up.
 # -----------------------------------------------------------------------------
 clean:
-	@for app in $(APPS) ; do		\
-            cd $$app && $(MAKE) clean ;		\
+	@for dir in $(DIRS) ; do		\
+            cd $$dir && $(MAKE) clean ;		\
             cd .. ;				\
         done
