Beginning of change to make the remote nav portion of the code an optional "plugin".  If I just knew how to conditionally define a symbol in the makefile based on the target, this would be complete.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14027 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/samples/OSG/simple/osgNav/Makefile.in
+++ b/juggler/modules/vrjuggler/samples/OSG/simple/osgNav/Makefile.in
@@ -72,6 +72,7 @@ EXTRA_LIBS+=		$(TWEEK_LIBS) $(TWEEK_EXTRA_LIBS_MIN)
 
 IDL_CXX_FILES=		RemoteNavSubject.cpp RemoteNavSubject.h
 
+# Need to not do this unless target is "remote"
 SRCS+=			RemoteNavSubject.cpp
 endif
 
@@ -89,6 +90,9 @@ endif
 # Application build targets.
 # -----------------------------------------------------------------------------
 all:
+	$(MAKE) $(APP_NAME)
+
+remote:
 	$(MAKE) cxx_idl
 #	$(MAKE) python_idl
 	$(MAKE) NO_DEPEND=0 cxx
