Fixed multiply defined symbol errors encountered when compiling pfConfigNav on Linux.  I am astounded and disappointed that this has gone unnoticed for so long.
git-svn-id: https://vrjuggler.googlecode.com/svn/branches/RELENG_1_0/juggler_1.0@14044 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/samples/pf/pfConfigNav/Makefile.in
+++ b/samples/pf/pfConfigNav/Makefile.in
@@ -84,7 +84,8 @@ COMMON_OBJECTS	= simplePfNavApp.@OBJ_FILE_SUFFIX@	\
                   pfTerryCollide.@OBJ_FILE_SUFFIX@	\
                   pfTerryPogoCollide.@OBJ_FILE_SUFFIX@	\
                   pfTerryBoxCollide.@OBJ_FILE_SUFFIX@	\
-                  pfMPStats.@OBJ_FILE_SUFFIX@
+                  pfMPStats.@OBJ_FILE_SUFFIX@		\
+                  pfNavDCS.@OBJ_FILE_SUFFIX@
 
 PF_BASIC_CONFIG_NAV_OBJECTS = pfBasicConfigNav.@OBJ_FILE_SUFFIX@	\
                               $(COMMON_OBJECTS)
