Silence GCC 3.3 warning.
git-svn-id: https://vrjuggler.googlecode.com/svn/branches/RELENG_1_0/juggler_1.0@14045 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/configure.in
+++ b/configure.in
@@ -541,7 +541,7 @@ case $target_os in
 
         AR='ar'
         ARFLAGS='-ruv'
-        CXXFLAGS="-Wall -Werror-implicit-function-declaration $CXXFLAGS"
+        CXXFLAGS="-Wall $CXXFLAGS"
         LD='${CXX} -shared'
         LDOPTS=''
         DBG_FLAGS='-g'
@@ -569,7 +569,7 @@ case $target_os in
 
         AR='ar'
         ARFLAGS='-ruv'
-        CXXFLAGS="-Wall -Werror-implicit-function-declaration $CXXFLAGS"
+        CXXFLAGS="-Wall $CXXFLAGS"
         LD='${CXX} -shared'
         LDOPTS=''
         OPT_FLAGS='-O1'
@@ -597,7 +597,7 @@ case $target_os in
 
         AR='ar'
         ARFLAGS='-ruv'
-        CXXFLAGS="-Wall -Werror-implicit-function-declaration $CXXFLAGS"
+        CXXFLAGS="-Wall $CXXFLAGS"
         LD='${CXX} -G'
         LDOPTS=''
         DBG_FLAGS='-g'
