No version of link.exe seems to recognize the /DEBUG or /PDB arguments.
git-svn-id: https://vrjuggler.googlecode.com/svn/branches/RELENG_1_0/juggler_1.0@14113 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/configure.in
+++ b/configure.in
@@ -664,7 +664,7 @@ case $target_os in
             OPT_FLAGS='-GB -MT'
             LD='link -dll'
             LDOPTS="$LDOPTS -nologo -out:\"${OBJDIR}/Juggler.lib\""
-            LDOPTS_DBG='-DEBUG -PDB:NONE'
+            LDOPTS_DBG=''
             LDOPTS_OPT='-RELEASE'
             OBJ_FILE_SUFFIX='obj'
             OBJ_NAME_FLAG='-Fo$@'
