Do not try to build pfSoundNode on Windows.  Something about it deriving from pfDCS causes multiply defined symbols when applications are linked. I suspect that it has something to do with the lack of DLL support in this code base since no such problems ever occurred with VR Juggler 1.1.
git-svn-id: https://vrjuggler.googlecode.com/svn/branches/RELENG_1_0/juggler_1.0@14115 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/Sound/pf/Makefile.in
+++ b/Sound/pf/Makefile.in
@@ -68,8 +68,11 @@ vpath %.c @srcdir@
 vpath %.cpp @srcdir@
 vpath %.${OBJ_FILE_SUFFIX} ${OBJDIR}
 
+# pfSoundNode does not work correctly on Windows.
+ifneq (@OS_TYPE@, Win32)
 ifeq (@PERFORMER_API@, Y)
 SOUND_SRCS	:= pfSoundNode.cpp
+endif
 endif
 
 SOUND_OBJECTS	:= ${addprefix ${OBJDIR}/,${SOUND_SRCS:.cpp=.${OBJ_FILE_SUFFIX}}}
