VPR now requires an installed version of Boost.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14224 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/test/Thread/Makefile.in
+++ b/juggler/modules/vapor/test/Thread/Makefile.in
@@ -61,12 +61,7 @@ DEFS		= @APP_DEFS@
 EXTRA_CFLAGS	= @APP_EXTRA_CFLAGS@ $(DEBUG_CFLAGS)
 DEBUG_CFLAGS	= @APP_DEBUG_CFLAGS@
 OPTIM_CFLAGS	= @APP_OPTIM_CFLAGS@
-INCLUDES	= @APP_INCLUDES@ -I$(srcdir)
-
-ifeq (@PLATFORM@, IRIX)
-    INCLUDES	+= -I$(VPR_BASE_DIR)/include/boost/compatibility/cpp_c_headers
-endif
-
+INCLUDES	= @APP_INCLUDES@ @BOOST_INCLUDES@ -I$(srcdir)
 EXTRA_LFLAGS	= @APP_EXTRA_LFLAGS@ $(DEBUG_LFLAGS)
 DEBUG_LFLAGS	= @APP_DEBUG_LFLAGS@
 OPTIM_LFLAGS	= @APP_OPTIM_LFLAGS@
