--- a/juggler/modules/vapor/test/TestSuite/test.defs.mk.in
+++ b/juggler/modules/vapor/test/TestSuite/test.defs.mk.in
@@ -71,9 +71,5 @@ CPP_UNIT=	@CPPUNIT_ROOT@
 EXTRA_CFLAGS=	@APP_EXTRA_CFLAGS@
 EXTRA_CXXFLAGS=	@APP_EXTRA_CFLAGS@
 EXTRA_DEFS=	-DGRAPH_PATH="\"$(VPRROOT_ABS)\""
-EXTRA_INCLUDES=	-I$(VPR_BASE_DIR)/include -I$(test_topsrcdir) -I$(CPP_UNIT)/include
-
-ifeq (@PLATFORM@, IRIX)
-   EXTRA_DEPEND_FLAGS+=	-I$(VPR_BASE_DIR)/include/boost/compatibility/cpp_c_headers
-   EXTRA_INCLUDES+=	-I$(VPR_BASE_DIR)/include/boost/compatibility/cpp_c_headers
-endif
+EXTRA_INCLUDES=	@BOOST_INCLUDES@ -I$(VPR_BASE_DIR)/include		\
+		-I$(test_topsrcdir) -I$(CPP_UNIT)/include
