Adding another include directory.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14264 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/vc7/JCCL/JCCL.vcproj
+++ b/juggler/vc7/JCCL/JCCL.vcproj
@@ -118,7 +118,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;$(NSPR_ROOT)\include&quot;;.;..\..\modules\vapor;..\VPR;..\..\modules\jackal\common;..\..\modules\jackal\config"
+				AdditionalIncludeDirectories="&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;$(NSPR_ROOT)\include&quot;;.;..\..\modules\vapor;..\VPR;..\..\modules\jackal\common;..\..\modules\jackal\config;..\..\modules\jackal\rtrc"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;_JCCL_BUILD_"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
