Added version information.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14273 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/vc7/JCCL/JCCL.vcproj
+++ b/juggler/vc7/JCCL/JCCL.vcproj
@@ -36,6 +36,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="vpr_d.lib cppdom.lib libnspr4.lib libplc4.lib ws2_32.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)/jccl_d.dll"
+				Version="0.15.1"
 				LinkIncremental="0"
 				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib\DebugDLL&quot;;&quot;$(BOOST_ROOT)\lib&quot;;..\VPR\DebugDLL"
 				GenerateDebugInformation="TRUE"
@@ -86,6 +87,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="vpr.lib cppdom.lib libnspr4.lib libplc4.lib ws2_32.lib"
 				OutputFile="$(OutDir)/jccl.dll"
+				Version="0.15.1"
 				LinkIncremental="0"
 				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib\ReleaseDLL&quot;;&quot;$(BOOST_ROOT)\lib&quot;;..\VPR\ReleaseDLL"
 				GenerateDebugInformation="FALSE"
