--- a/juggler/vc7/Tweek_CXX/Tweek_CXX.vcproj
+++ b/juggler/vc7/Tweek_CXX/Tweek_CXX.vcproj
@@ -36,6 +36,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="omniORB402_rtd.lib omnithread30_rtd.lib omniDynamic402_rtd.lib vpr_d.lib libnspr4.lib"
 				OutputFile="$(OutDir)/tweek_d.dll"
+				Version="0.16.2"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(OMNIORB_ROOT)\lib\x86_win32&quot;;&quot;$(NSPR_ROOT)\lib&quot;;..\VPR\DebugDLL"
 				ModuleDefinitionFile="..\..\modules\tweek\corba_exports.def"
@@ -94,6 +95,7 @@ $(OMNIORB_ROOT)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -Ctweek\CORBA -I../..
 				Name="VCLinkerTool"
 				AdditionalDependencies="omniORB402_rt.lib omnithread30_rt.lib omniDynamic402_rt.lib vpr.lib libnspr4.lib"
 				OutputFile="$(OutDir)/tweek.dll"
+				Version="0.16.2"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="..\VPR\ReleaseDLL;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(OMNIORB_ROOT)\lib\x86_win32&quot;"
 				ModuleDefinitionFile="..\..\modules\tweek\corba_exports.def"
