Added version information for the DLL.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14276 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/vc7/VRJuggler/VRJuggler.vcproj
+++ b/juggler/vc7/VRJuggler/VRJuggler.vcproj
@@ -35,6 +35,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="sonix_d.lib gadget_d.lib jccl_d.lib vpr_d.lib cppdom.lib libnspr4.lib"
 				OutputFile="$(OutDir)/vrj_d.dll"
+				Version="1.1.148"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="..\VPR\DebugDLL;..\JCCL\DebugDLL;..\Gadgeteer\DebugDLL;..\Sonix\DebugDLL;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib\DebugDLL&quot;;&quot;$(BOOST_ROOT)\lib&quot;"
 				GenerateDebugInformation="TRUE"
@@ -84,6 +85,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="sonix.lib gadget.lib jccl.lib vpr.lib cppdom.lib libnspr4.lib"
 				OutputFile="$(OutDir)/vrj.dll"
+				Version="1.1.148"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="..\VPR\ReleaseDLL;..\JCCL\ReleaseDLL;..\Gadgeteer\ReleaseDLL;..\Sonix\ReleaseDLL;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib\ReleaseDLL&quot;;&quot;$(BOOST_ROOT)\lib&quot;"
 				GenerateDebugInformation="FALSE"
