Allowing BOOST_TOOL to set the different boost library to test against on windows. This currently defaults to vc7 if the environment variable is not set.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14317 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/configure.in
+++ b/juggler/modules/vapor/configure.in
@@ -592,7 +592,7 @@ case $CC in
       toolset='gcc'
       ;;
    cygcl|msvccc|cl*|CL*)
-      toolset='vc'
+      toolset=${BOOST_TOOL:=vc7}
       ;;
    cc)
       if test "x$GCC" = "xyes" ; then
