- Added Intel C Compiler to the boost toolset detection; now boost libraries   build with icc should be detected correctly.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14354 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/configure.in
+++ b/juggler/modules/vapor/configure.in
@@ -591,6 +591,13 @@ case $CC in
    gcc)
       toolset='gcc'
       ;;
+   icc)
+      if test "x$OS_TYPE" = "xWin32" ; then
+         toolset='iw'
+      else
+         toolset='il'
+      fi
+      ;;
    cygcl|msvccc|cl*|CL*)
       toolset=${BOOST_TOOL:=vc7}
       ;;
