Touch up --help output formatting.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14355 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/sonix/plugins/configure.in
+++ b/juggler/modules/sonix/plugins/configure.in
@@ -73,8 +73,7 @@ AC_ARG_ENABLE(audioworks,
 
 # does the user want Audiere?
 AC_ARG_ENABLE(audiere,
-              [  --enable-audiere        Compile in Audiere support
-              [default=yes]],
+              [  --enable-audiere        Compile in Audiere support      [default=yes]],
               [AUDIERE_ENABLED="$enableval"], [AUDIERE_ENABLED='yes'])
 
 # -------------------------------------------- #
