Fixing install tree.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14393 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/mtree/GADGET.include.dist.in
+++ b/juggler/modules/gadgeteer/mtree/GADGET.include.dist.in
@@ -38,6 +38,12 @@
 /set type=dir mode=@DIR_PERMS@ uname=@OWNER_NAME@ gname=@GROUP_NAME@
 .
     include
+        cluster
+            ClusterNetwork
+            ..
+            Packets
+            ..
+        ..
         gadget
             Devices
                 EventWindow
@@ -58,20 +64,8 @@
             Util
             ..
         ..
-        cluster
-            ClusterNetwork
-            ..
-            Packets
-            ..
-            Plugins
-                ApplicationDataManager
-                ..
-                RemoteInputManager
-                ..
-                StartBarrierPlugin
-                ..
-                SwapLockPlugin
-                ..
+        plugins
+            ApplicationDataManager
             ..
         ..
     ..
