Stopping the old code from compiling.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14394 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/cluster/Makefile.in
+++ b/juggler/modules/gadgeteer/cluster/Makefile.in
@@ -52,9 +52,7 @@ DIRPRFX=	cluster/
 
 # Subdirectories to compile.
 SUBDIR=		ClusterNetwork	\
-		Packets		#\
-# Not needed anymore since we are building the plugins dynamically.		
-#		Plugins
+		Packets
 
 SRCS=		ClusterManager.cpp \
 		ClusterDepChecker.cpp	\
