Ensure that the output directory exists before linking the plug-in.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14422 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/sonix/plugins/plugin.defs.mk.in
+++ b/juggler/modules/sonix/plugins/plugin.defs.mk.in
@@ -67,4 +67,5 @@ DYLIB_DEPS=	$(PRE_DSO_PLUGIN_DEPS) @DSO_PLUGIN_DEPS@ $(POST_DSO_PLUGIN_DEPS)
 plugin-dso: $(DSO_PLUGIN_DIR)/$(PLUGIN_DSO)
 
 $(DSO_PLUGIN_DIR)/$(PLUGIN_DSO): $(OBJECTS)
+	$(MKINSTALLDIRS) $(DSO_PLUGIN_DIR)
 	$(CXX_PLUGIN) $(LDOPTS) $(DYLIB_NAME_FLAG) $(OBJECTS) $(DYLIB_DEPS)
