Forcibly disable building of profiled plug-ins.  The C++ code infrastructure does not yet have a way to handle that case.  When it does, this revision can be backed out.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14425 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/jackal/plugins/Makefile.in
+++ b/juggler/modules/jackal/plugins/Makefile.in
@@ -109,8 +109,8 @@ include @topdir@/make.defs.mk
 
 STARTTIME:=	$(shell LC_TIME=C date)
 
-BUILD_PROF_C=	@BUILD_PROF_C@
-BUILD_PROF_CXX=	@BUILD_PROF_CXX@
+BUILD_PROF_C=	N
+BUILD_PROF_CXX=	N
 
 # If we can build both C and C++ profiled objects, we will build profiled
 # libraries.
