Simplify the assignment of the name for the subdirectory where the plug-in will be generated.  As part of this, the profiled Sonix plug-ins now go into the 'prof' subdirectory so that they do not conflict with those in the 'dbg' subdirectory.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14426 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/sonix/plugins/plugin.defs.mk.in
+++ b/juggler/modules/sonix/plugins/plugin.defs.mk.in
@@ -43,16 +43,7 @@
 # -----------------------------------------------------------------------------
 # Common code for plug-in DSOs.
 # -----------------------------------------------------------------------------
-ifeq ($(BUILD_TYPE), dbg)
-   BUILD_TYPE_DIR=	dbg
-endif
-ifeq ($(BUILD_TYPE), opt)
-   BUILD_TYPE_DIR=	opt
-endif
-ifeq ($(BUILD_TYPE), prof)
-   BUILD_TYPE_DIR=	dbg
-endif
-
+BUILD_TYPE_DIR=	$(BUILD_TYPE)
 LIBDIR_NAME?=	lib$(LIBBITSUF)
 
 # $(LIBDIR_BASE) is the base directory where the libraries will be built.
